[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
env_logger = "0.9"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"]}
log = "0.4"
pollster = "0.2"
winit = "0.26"
wgpu = "0.12"
